fixed visiblity buttons

--- a/assets/less/bootstrap/directus.less
+++ b/assets/less/bootstrap/directus.less
@@ -573,6 +573,10 @@ a:hover {text-decoration:none;}
   .button-group {
     display:inline-block;
   }
+  .btn-group {
+    margin-left:0;
+    margin-right:5px;
+  }
   div.filter {
     input {
       background-image: url('../img/magnifying-glass.png');
